--- a/public/index.html
+++ b/public/index.html
@@ -5,52 +5,76 @@
   <title>Let Me 3D Print That For You</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Paste an STLFlix model link and get a custom 3D printing quote by email." />
-  <link rel="stylesheet" href="/style.css?v=modern2" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
+
 <body>
   <div class="page-shell">
-    <header class="header">
-      <div class="header-inner">
-        <a class="brand" href="/" style="text-decoration:none;">
-          <img src="/lm3dptfy-logo-tp-cropped.png" alt="LM3DPTFY" />
-          <div class="brand-text">
-            <div class="brand-title">Let Me 3D Print That For You</div>
-            <div class="brand-sub">Fast quotes • Clear ETA • No spam</div>
+
+    <!-- Top bar -->
+    <header class="topbar">
+      <div class="topbar-inner">
+        <a class="brand" href="/" title="LM3DPTFY">
+          <img src="/lm3dptfy-logo-tp-cropped.png" alt="LM3DPTFY logo" />
+          <div class="brand-title">
+            <strong>Let Me 3D Print That For You</strong>
+            <span>Fast quotes • Clear ETA • No spam</span>
           </div>
         </a>
-        <nav class="nav">
-          <a href="#how">How it works</a>
-        </nav>
+
+        <!-- Removed "How it works" link up top -->
+        <div class="nav-right"></div>
       </div>
     </header>
 
     <main class="page-main">
-      <div class="container">
+      <div class="main-inner">
+
         <section class="hero">
           <h1>Turn STLFlix models into real prints.</h1>
-          <p>Paste a public <b>STLFlix</b> link. I’ll email you pricing, ETA, and any quick questions before printing.</p>
+          <p>
+            Paste a public <strong>STLFlix</strong> link. I’ll email you pricing, ETA, and any quick questions before printing.
+          </p>
         </section>
 
         <section class="card form-card">
-          <form action="request.html" method="GET">
-            <label class="field-label" for="stlLink">
-              <a href="https://platform.stlflix.com/explore" target="_blank" rel="noopener noreferrer">STLFlix model link</a>
+          <form class="stl-form" action="request.html" method="GET">
+            <label for="stlLink" class="field-label">
+              <a href="https://platform.stlflix.com/explore" target="_blank" rel="noopener noreferrer">
+                STLFlix model link
+              </a>
             </label>
-            <input class="field-input" type="url" id="stlLink" name="link" placeholder="https://stlflix.com/..." required />
-            <button class="btn-primary" type="submit">Get Quote</button>
-            <div class="small-note">Need a model? Click “STLFlix model link” above to browse files.</div>
+
+            <input
+              type="url"
+              id="stlLink"
+              name="link"
+              class="field-input"
+              placeholder="https://stlflix.com/..."
+              required
+            />
+
+            <button type="submit" class="btn-primary btn-block">
+              Get Quote
+            </button>
+
+            <p class="small-note">
+              Need a model? Click “STLFlix model link” above to browse files.
+            </p>
           </form>
         </section>
 
-        <section id="how">
-          <div class="section-title">How this works</div>
-          <ol class="ol">
-            <li>Find a model on STLFlix and copy the link.</li>
-            <li>Paste it here, then add your name/email on the next step.</li>
-            <li>I’ll reply with a quote + ETA (and any questions) before printing.</li>
-          </ol>
+        <section class="how-grid" id="how">
+          <div class="card list-card">
+            <h2 class="section-title" style="margin-top:0;">How this works</h2>
+            <ol>
+              <li>Find a model on STLFlix and copy the link.</li>
+              <li>Paste it here, then add your name/email on the next step.</li>
+              <li>I’ll reply with a quote + ETA (and any questions) before printing.</li>
+            </ol>
+          </div>
 
-          <div class="features">
+          <div class="feature-grid">
             <div class="feature">
               <h3>Quote</h3>
               <p>Price based on material, size, and print time — no guessing.</p>
@@ -64,17 +88,18 @@
               <p>Approve, tweak, or ask questions — quick and simple.</p>
             </div>
           </div>
-
-          <div class="small-note" style="margin-top:14px;">
-            I won’t print weapons, illegal items, or obviously infringing IP.
-          </div>
         </section>
+
+        <p class="small-note" style="margin-top:18px;">
+          I won’t print weapons, illegal items, or obviously infringing IP.
+        </p>
+
       </div>
     </main>
 
-    <footer class="footer">
-      Let Me 3D Print That For You · LM3DPTFY.online · Questions? Email
-      <a href="mailto:lm3dptfy@gmail.com">lm3dptfy@gmail.com</a>
+    <footer class="site-footer">
+      Let Me 3D Print That For You · LM3DPTFY.online ·
+      Questions? Email <a href="mailto:lm3dptfy@gmail.com">lm3dptfy@gmail.com</a>
     </footer>
   </div>
 </body>
